Estructura del index.html terminada

--- a/index.html
+++ b/index.html
@@ -1,12 +1,149 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Josian Espinosa-Dev</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="/css/index.css" />
+    <script
+      src="https://kit.fontawesome.com/3a128e603e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+
+    <header>
+      <div class="container">
+        <p class="logo">Josian Espinosa</p>
+        <ul class="nav">
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-mug-saucer"></i>
+              <span>Inicio</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-user-secret"></i>
+              <span>Acerca de mí</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-briefcase"></i>
+              <span>Proyectos</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-solid fa-code"></i>
+              <span>Skills</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-sharp fa-solid fa-message"></i>
+              <span>Contacto</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <section id="hero">
+      <h1>
+        Hola, Soy Josian Espinosa <br />
+        Desarrollador web
+      </h1>
+      <form>
+        <button>Más sobre mí</button>
+      </form>
+    </section>
+    <section id="sobre-mi">
+      <div class="container">
+        <div class="img-container">
+        <h2>Mi nombre es Josian Espinosa</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
+          neque culpa, distinctio libero porro ex quos quidem odit illo aut
+          impedit fugit debitis nam nostrum voluptate provident doloribus
+          voluptates ipsam.
+        </p>
+      </div>
+    </section>
+    <section id="proyectos">
+        <div class="container">
+            <h2>Proyectos Desarrrollados</h2> 
+      <div class="proyecto">
+        <h3>Proyecto 1</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias,
+          dolorum consectetur iusto quis voluptas sit quo ipsa modi temporibus,
+          labore maxime sint ullam vitae nihil earum laborum tempore suscipit
+          cum?
+        </p>
+        <button>Ver +</button>
+      </div>
+
+      <div class="proyecto">
+        <h3>Proyecto 2</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias,
+          dolorum consectetur iusto quis voluptas sit quo ipsa modi temporibus,
+          labore maxime sint ullam vitae nihil earum laborum tempore suscipit
+          cum?
+        </p>
+        <button>Ver +</button>
+      </div>
+
+      <div class="proyecto">
+        <h3>Proyecto 3</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias,
+          dolorum consectetur iusto quis voluptas sit quo ipsa modi temporibus,
+          labore maxime sint ullam vitae nihil earum laborum tempore suscipit
+          cum?
+        </p>
+        <button>Ver +</button>
+      </div>
+        </div>
+    </section>
+    <section id="skills">
+        <div class="container">
+            <div class="skills-imgs">
+                <h2>Mis Habilidades</h2>
+                <div class="row">
+                    <div class="col"><img class="image" src="/media/javalogo.png" alt="Java logo" ></div>
+                    <div class="col"><img class="image" src="/media/html5logo.png" alt="Html 5 logo" ></div>
+                    <div class="col"><img class="image" src="/media/csslogo.png" alt="Css logo" ></div>
+                    <div class="col"><img class="image" src="/media/gitlogo.png" alt="git logo" ></div>
+                </div>
+        </div>
+        </div>
+    </section>
+    <section id="contacto">
+        <div class="container">
+            <h2>Contactame</h2>
+            <div class="social-links">
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+
+                <div class="mail-contact">
+                    <a href="mailto:josian_amir@hotmail.com"> 
+                        josian_amir@hotmail.com
+                    </a>
+                </div>
+                <div class="container"><hr> </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>&copy; F0RB3S 2022</p> 
+            
+        </div>
+    </footer>
+  </body>
 </html>
