--- a/index.html
+++ b/index.html
@@ -14,42 +14,59 @@
   <body>
 
     <header>
-      <div class="container">
-        <p class="logo">Josian Espinosa</p>
+      <div class="sidebar">
+        <a class="logo" href="">
+           <img src="/media/perfil.jpg" alt="">
+        </a>
         <ul class="nav">
           <li>
             <a href="#">
               <i class="fa-solid fa-mug-saucer"></i>
+              <br>
               <span>Inicio</span>
             </a>
           </li>
           <li>
             <a href="#">
               <i class="fa-solid fa-user-secret"></i>
+              <br>
               <span>Acerca de mí</span>
             </a>
           </li>
           <li>
             <a href="#">
               <i class="fa-solid fa-briefcase"></i>
+              <br>
               <span>Proyectos</span>
             </a>
           </li>
           <li>
             <a href="#">
               <i class="fa-solid fa-code"></i>
+              <br>
               <span>Skills</span>
             </a>
           </li>
           <li>
             <a href="#">
               <i class="fa-sharp fa-solid fa-message"></i>
+              <br>
               <span>Contacto</span>
             </a>
           </li>
         </ul>
+
+        <div class="social-links-nav">
+                <a href=""><i class="fa-brands fa-youtube"></i></a> 
+                <br>
+                <a href=""><i class="fa-brands fa-github"></i></a>
+                <br>
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+
       </div>
     </header>
+    <div class="main">
     <section id="hero">
       <h1>
         Hola, Soy Josian Espinosa <br />
@@ -73,7 +90,7 @@
     </section>
     <section id="proyectos">
         <div class="container">
-            <h2>Proyectos Desarrrollados</h2> 
+            <h2>Proyectos</h2> 
       <div class="proyecto">
         <h3>Proyecto 1</h3>
         <p>
@@ -144,6 +161,8 @@
             <p>&copy; F0RB3S 2022</p> 
             
         </div>
+        
     </footer>
+    </div>
   </body>
 </html>
