Pagina version movil terminada

--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
 
     <header>
       <div class="sidebar">
-        <a class="logo" href="">
+        <a class="logo" href="#">
            <img src="/media/perfil.jpg" alt="">
         </a>
         <ul class="nav">
           <li>
-            <a href="#">
+            <a href="#hero">
               <i class="fa-solid fa-mug-saucer"></i>
               <br>
               <span>Inicio</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#sobre-mi">
               <i class="fa-solid fa-user-secret"></i>
               <br>
               <span>Acerca de mí</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#proyectos">
               <i class="fa-solid fa-briefcase"></i>
               <br>
               <span>Proyectos</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#skills">
               <i class="fa-solid fa-code"></i>
               <br>
               <span>Skills</span>
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="#contacto">
               <i class="fa-sharp fa-solid fa-message"></i>
               <br>
               <span>Contacto</span>
@@ -69,8 +69,8 @@
     <div class="main">
     <section id="hero">
       <h1>
-        Hola, Soy Josian Espinosa <br />
-        Desarrollador web
+       ¡Hola, Soy Josian Espinosa <br />
+       <span class="color-acento"> Desarrollador web!</span>
       </h1>
       <form>
         <button>Más sobre mí</button>
@@ -79,8 +79,9 @@
     <section id="sobre-mi">
       <div class="container">
         <div class="img-container">
-        <h2>Mi nombre es Josian Espinosa</h2>
-        <p>
+            <h2>ACERCA DE MÍ</span></h2>
+            <br>
+            <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
           neque culpa, distinctio libero porro ex quos quidem odit illo aut
           impedit fugit debitis nam nostrum voluptate provident doloribus
@@ -90,7 +91,9 @@
     </section>
     <section id="proyectos">
         <div class="container">
-            <h2>Proyectos</h2> 
+            <h2>PROYECTOS</h2>
+            <br>
+    <div class="proyectos">
       <div class="proyecto">
         <h3>Proyecto 1</h3>
         <p>
@@ -124,23 +127,25 @@
         <button>Ver +</button>
       </div>
         </div>
+        </div>
     </section>
     <section id="skills">
         <div class="container">
-            <div class="skills-imgs">
-                <h2>Mis Habilidades</h2>
+            <h2>MIS HABILIDADES</h2>
                 <div class="row">
-                    <div class="col"><img class="image" src="/media/javalogo.png" alt="Java logo" ></div>
-                    <div class="col"><img class="image" src="/media/html5logo.png" alt="Html 5 logo" ></div>
-                    <div class="col"><img class="image" src="/media/csslogo.png" alt="Css logo" ></div>
-                    <div class="col"><img class="image" src="/media/gitlogo.png" alt="git logo" ></div>
+                    <div class="column">
+                    <div class="item"><img class="image" src="/media/javalogo.png" alt="Java logo" ></div>
+                    <div class="item"><img class="image" src="/media/html5logo.png" alt="Html 5 logo" ></div>
                 </div>
-        </div>
-        </div>
+                <div class="column">
+                    <div class="item"><img class="image" src="/media/csslogo.png" alt="Css logo" ></div>
+                    <div class="item"><img class="image" src="/media/gitlogo.png" alt="git logo" ></div>
+                </div>
+                </div>
     </section>
     <section id="contacto">
         <div class="container">
-            <h2>Contactame</h2>
+            <h2>CONTACTAME</h2>
             <div class="social-links">
                 <a href=""><i class="fa-brands fa-facebook"></i></a>
                 <a href=""><i class="fa-brands fa-youtube"></i></a>
@@ -152,9 +157,13 @@
                         josian_amir@hotmail.com
                     </a>
                 </div>
-                <div class="container"><hr> </div>
+                <div class="hr">
+                    <hr> 
+
+                </div>
             </div>
         </div>
+        
     </section>
     <footer>
         <div class="container">
