Pagina terminada version escritorio

--- a/index.html
+++ b/index.html
@@ -72,14 +72,15 @@
        ¡Hola, Soy Josian Espinosa <br />
        <span class="color-acento"> Desarrollador web!</span>
       </h1>
-      <form>
+      <form action="#sobre-mi"">
         <button>Más sobre mí</button>
       </form>
     </section>
     <section id="sobre-mi">
       <div class="container">
-        <div class="img-container">
-            <h2>ACERCA DE MÍ</span></h2>
+        <div class="img-container"> </div>
+        <div class="texto">
+            <h2>ACERCA DE MÍ</h2>
             <br>
             <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis,
@@ -87,6 +88,7 @@
           impedit fugit debitis nam nostrum voluptate provident doloribus
           voluptates ipsam.
         </p>
+        </div>
       </div>
     </section>
     <section id="proyectos">
@@ -96,23 +98,13 @@
     <div class="proyectos">
       <div class="proyecto">
         <h3>Proyecto 1</h3>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias,
-          dolorum consectetur iusto quis voluptas sit quo ipsa modi temporibus,
-          labore maxime sint ullam vitae nihil earum laborum tempore suscipit
-          cum?
-        </p>
+        
         <button>Ver +</button>
       </div>
 
       <div class="proyecto">
         <h3>Proyecto 2</h3>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias,
-          dolorum consectetur iusto quis voluptas sit quo ipsa modi temporibus,
-          labore maxime sint ullam vitae nihil earum laborum tempore suscipit
-          cum?
-        </p>
+ 
         <button>Ver +</button>
       </div>
 
@@ -142,6 +134,7 @@
                     <div class="item"><img class="image" src="/media/gitlogo.png" alt="git logo" ></div>
                 </div>
                 </div>
+        </div>
     </section>
     <section id="contacto">
         <div class="container">
@@ -172,6 +165,7 @@
         </div>
         
     </footer>
+    </div>
     </div>
   </body>
 </html>
