Elemento de precarga con Js

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 </head>
 
 <body>
+  <div class="loadingio-spinner-eclipse-5owis7mtho carga" id="carga"><div class="ldio-r7quzwqmis">
+    <div></div>
+    </div></div>
 
   <header>
     <div class="sidebar">
       <a class="logo" href="#">
         <img src="/media/perfil.jpg" alt="">
       </a>
+      <div class="barra-lateral">
       <ul class="nav">
         <li>
           <a href="#hero">
@@ -63,6 +67,7 @@
         <a href=""><i class="fa-brands fa-linkedin"></i></a>
       </div>
 
+       </div>
     </div>
   </header>
   <div class="main">
@@ -168,6 +173,8 @@
     </footer>
   </div>
   </div>
+
+  <script src="/js/carga.js"></script>
 </body>
 
 </html>
